--- a/html/css/result.css
+++ b/html/css/result.css
@@ -12,7 +12,6 @@
     background-color: #F2F5FF;
 }
 .space-sec{
-    margin-top:40px;
 }
 .space-block{
     position: relative;
@@ -27,7 +26,6 @@
 .block-img-inner{
     width:100%;
     padding-top:62%;
-    min-height: 240px;
     background-size:cover;
     background-position: center;
 }
@@ -63,19 +61,11 @@
 }
 .block-butt-left{
     float:left;
-    margin-right:20px;
-    color:black;
-}
-.block-butt-left-top{
-    margin-top:10px;
+    margin-bottom: 10px;
 }
 .block-butt-right{
     float:right;
-}
-@media (max-width: 575px){
-.block-butt-right{
     width:100%;
-}
 }
 .block-price{
     float:left;
@@ -89,14 +79,4 @@
 }
 .block-btn{
     float:right;
-}
-
-.block-tag{
-    float: left;
-    margin-right: 5px;
-    padding:4px 10px;
-    font-size: 12px;
-    background-color: #B5C6FF;
-    border-radius:20px;
-    color:white;
 }
