--- a/html/css/space.css
+++ b/html/css/space.css
@@ -4,10 +4,10 @@
 .header-bar{
     position: absolute;
     width:100%;
-    padding-bottom: 20px;
-    background: -moz-linear-gradient(top, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, rgba(0,0,0,0.4) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, rgba(0,0,0,0.4) 0%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    height:200px;
+    background: -moz-linear-gradient(top, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgba(0,0,0,0.7) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, rgba(0,0,0,0.7) 0%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#66000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
 }
 .header-logo{
@@ -47,6 +47,12 @@
     padding: 20px;
     border-radius: 4px;
 }
+.space-icon{
+    float:left;
+}
+.space-capacity{
+    float:right;
+}
 .space-price{
     float:left;
     margin-right: 10px;
@@ -78,21 +84,13 @@
     width:100%;
     margin-top: 5px;
 }
-.space-food{
+.space-right-box:last-child{
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     border: none;
 }
-.food-image{
-    position: relative;
-    margin:auto;
-    margin-top:10px;
-    width:100px;
-    height:100px;
-    border-radius: 50px;
-    overflow: hidden;
-    background-size: cover;
-    background-position: center;
+.space-form-input{
+    margin-bottom:20px;
 }
 .space-middle{
     margin-bottom:15px;
@@ -106,6 +104,9 @@
 .detail-sec{
     padding-top: 20px;
     padding-bottom: 20px;
+}
+.detail-sec:first-child{
+    padding-top:0;
 }
 .detail-sec li{
     margin-bottom: 10px;
@@ -138,8 +139,6 @@
     border-top: 1px solid #D9E2FF;
 }
 .space-desc{
-    padding-bottom:20px;
-    margin-bottom: 20px
 }
 
 .space-modal-form{
@@ -161,9 +160,8 @@
     box-sizing: content-box;
 }
 .modal-booking{
-    background-color: #F2F5FF;
-    padding-top:20px;
-    padding-bottom:20px;
+    padding-top:0;
+    padding-bottom:0;
 }
 .modal-booking-close{
     float: right;
@@ -186,7 +184,6 @@
 }
 }
 
-
-.soonmodal-input{
-    margin: 20px 0;
+.input-row{
+    margin-bottom:20px;
 }
