--- a/html/css/space.css
+++ b/html/css/space.css
@@ -107,6 +107,7 @@
 }
 .detail-sec:first-child{
     padding-top:0;
+    padding-bottom: 10px;
 }
 .detail-sec li{
     margin-bottom: 10px;
@@ -133,7 +134,7 @@
     display:block;
     position: absolute;
     height:0;
-    bottom:-20px;
+    bottom:-10px;
     left:-5px;
     right:-5px;
     border-top: 1px solid #D9E2FF;
