--- a/public/css/global.css
+++ b/public/css/global.css
@@ -143,7 +143,8 @@
     padding:3px 10px;
     margin-bottom: 10px;
     font-size: 12px;
-    background-color: #B5C6FF;
+    background-color: white;
     border-radius:20px;
-    color:white;
+    border:1px solid #d9e2ff;
+    color:#777777;
 }
