--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -20,6 +20,16 @@
     padding-bottom: 30px;
 }
 
+.customer-table{
+    padding-top:40px;
+    text-align: center;
+    padding-bottom:60px;
+    background-color: #F2F5FF;
+}
+
+.customer-benefit{
+    margin-top:20px;
+}
 
 .landing-location{
     text-align: center;
