--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href = "css/reboot.css">
         <link rel="stylesheet" href = "css/global.css">
         <link rel="stylesheet" href = "css/landing.css">
+        <link rel="stylesheet" href = "css/datepicker.css">
         <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Prompt:100,200,300,400,500,600,700,800,900&amp;subset=thai" rel="stylesheet">
         <link href="https://file.myfontastic.com/G8KRYFNq9QatpXE9t32usG/icons.css" rel="stylesheet">
     </head>
@@ -16,23 +17,22 @@
         <div class="landing-header-wrapper">
             <div class="container-fluid landing-header">
                 <div class="header-logo">
-                    <a href="#" class="header-logo-block no-decor">
+                    <a href="/" class="header-logo-block no-decor">
                     </a>
                 </div>
-                <div class="register-btn">
+                <a href="#"><div class="register-btn">
                     Register
-                </div>
-                <div class="login-btn">
+                </div></a>
+                <a href="#"><div class="login-btn">
                     Login
-                </div>
+                </div></a>
                 <div class="header-content">
                     <div class="header-content-text">
                         <h1>Find a space for Power nap</h1>
-                        <h5>Rent a space on hourly basis.</h5>
+                        <h5>Hourly rental made easy and simple.</h5>
                     </div>
                     <div class="header-search col-lg-8">
                         <div class="input-group">
-                          <form id="search_space_form" action="/result" method="POST">
                             <div class="header-select form-control rounded-form-control">
                                 <div class="header-search-label small">Where</div>
                                 <select name="location">
@@ -43,7 +43,7 @@
                             </div>
                             <div class="header-select form-control rounded-form-control">
                                 <div class="header-search-label small">When</div>
-                                <input type="date" name="date">
+                                <input  type='text' class="form-control" name="date" id="dpd1" placeholder="Date">
                             </div>
                             <div class="header-select form-control rounded-form-control">
                                 <div class="header-search-label small">For What</div>
@@ -62,17 +62,44 @@
                                 </select>
                             </div>
                             <span class="input-group-btn">
-                                <button class="btn btn-primary" type="button" id="searchbtn"  data-toggle="modal" data-target="#locmodal" onclick="search_space()">Search</button>
+                                <button class="btn btn-primary" type="button" id="searchbtn" onclick="search_space()">Search</button>
                             </span>
-                          </form>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid customer-table">
+            <div class="container">
+                <h3 class="color-black">Why HourSpace?</h3>
+                <div class="customer-benefit row">
+                    <div class="col-md-4 col-sm-4 col-xxs-12 location-col">
+                        <img src="cus-icon1.png" width=150 height=150>
+                        <h5 class="location-block-text color-black">
+                            Cost-Saving
+                        </h5>
+                            Save up to 90% with demand-based pricing. No commitment and no hidden fees.                    
+                    </div>
+                    <div class="col-md-4 col-sm-4 col-xxs-12 location-col">
+                        <img src="cus-icon2.png" width=150 height=150>
+                        <h5 class="location-block-text color-black">
+                            Instant Booking
+                        </h5>
+                            Book and go. Two simple steps without calls or emails.
+                    </div>
+                    <div class="col-md-4 col-sm-4 col-xxs-12 location-col">
+                        <img src="cus-icon3.png" width=150 height=150>
+                        <h5 class="location-block-text color-black">
+                            Tailored to you
+                        </h5>
+                            Enjoy add-on service tailored to your needs that you won't get anywhere else.
                     </div>
                 </div>
             </div>
         </div>
         <div class="container-fluid">
             <div class="container-fluid landing-location">
-                <h3>What's your purpose?</h3>
+                <h3 class="color-black">Need private time?</h3>
                 <div class="landing-location-row">
                   <% for (var i = 0; i < categories.length; i++) {%>
                   <a class="foot-loc col-md-3 col-sm-6 col-xs-6 col-xxs-12 location-col" href="/result/<%= categories[i].name %>" data-loc=1>
@@ -83,19 +110,38 @@
                       </div>
                   </a>
                   <% } %>
-                </div>
+                </div>   
             </div>
         </div>
         <input type="hidden" name="curloc" value=0>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+        <script src="js/moment.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
-        <script src="js/landing.js"></script>
+        <script src="js/bootstrap-datetimepicker.min.js"></script>
+        <script>
+            var nowTemp = new Date();
+var now = new Date(nowTemp.getFullYear(), nowTemp.getMonth(), nowTemp.getDate(), 0, 0, 0, 0);
+ 
+var checkin = $('#dpd1').datepicker({
+  onRender: function(date) {
+    return date.valueOf() < now.valueOf() ? 'disabled' : '';
+  }
+}).on('changeDate', function(ev) {
+  if (ev.date.valueOf() > checkout.date.valueOf()) {
+    var newDate = new Date(ev.date)
+    newDate.setDate(newDate.getDate() + 1);
+    checkout.setValue(newDate);
+  }
+  checkin.hide();
+  $('#dpd2')[0].focus();
+}).data('datepicker');
+var checkout = $('#dpd2').datepicker({
+  onRender: function(date) {
+    return date.valueOf() <= checkin.date.valueOf() ? 'disabled' : '';
+  }
+}).on('changeDate', function(ev) {
+  checkout.hide();
+}).data('datepicker');
+        </script>
     </body>
-<script>
-function search_space(){
-  var frm = document.getElementById("search_space_form");
-  frm.submit();
-}
-</script>
-
 </html>
