--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -26,6 +26,9 @@
                 <a href="#"><div class="login-btn">
                     Login
                 </div></a>
+                <a class="create-btn btn-primary btn" href="/bussiness">
+                    <span class="small">List Your space</span>
+                </a>
                 <div class="header-content">
                     <div class="header-content-text">
                         <h1>Find a space for Power nap</h1>
