--- a/views/pages/result.ejs
+++ b/views/pages/result.ejs
@@ -26,6 +26,9 @@
                 <a href="#"><div class="login-btn">
                     Login
                 </div></a>
+                <a class="create-btn btn-primary btn" href="/bussiness">
+                    <span class="small">List Your space</span>
+                </a>
                 <div class="header-content">
                     <div class="container">
                         <div class="header-search col-xs-12">
