--- a/public/bootstrap/css/bootstrap-theme.css
+++ b/public/bootstrap/css/bootstrap-theme.css
@@ -5,8 +5,8 @@
  */
 
 /*!
- * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=f13f2a12f742b930eb6a55ff057b8868)
- * Config saved to config.json and https://gist.github.com/f13f2a12f742b930eb6a55ff057b8868
+ * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=88d75e70d6f917f8461ce251523f6369)
+ * Config saved to config.json and https://gist.github.com/88d75e70d6f917f8461ce251523f6369
  */
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
@@ -115,24 +115,24 @@ fieldset[disabled] .btn-default.active {
   background-image: none;
 }
 .btn-primary {
-  background-image: -webkit-linear-gradient(top, #638aff 0%, #265cff 100%);
-  background-image: -o-linear-gradient(top, #638aff 0%, #265cff 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#638aff), to(#265cff));
-  background-image: linear-gradient(to bottom, #638aff 0%, #265cff 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff638aff', endColorstr='#ff265cff', GradientType=0);
+  background-image: -webkit-linear-gradient(top, #0064bc 0%, #00437f 100%);
+  background-image: -o-linear-gradient(top, #0064bc 0%, #00437f 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#0064bc), to(#00437f));
+  background-image: linear-gradient(to bottom, #0064bc 0%, #00437f 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0064bc', endColorstr='#ff00437f', GradientType=0);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
   background-repeat: repeat-x;
-  border-color: #1c54ff;
+  border-color: #003e75;
 }
 .btn-primary:hover,
 .btn-primary:focus {
-  background-color: #265cff;
+  background-color: #00437f;
   background-position: 0 -15px;
 }
 .btn-primary:active,
 .btn-primary.active {
-  background-color: #265cff;
-  border-color: #1c54ff;
+  background-color: #00437f;
+  border-color: #003e75;
 }
 .btn-primary.disabled,
 .btn-primary[disabled],
@@ -152,28 +152,28 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #265cff;
+  background-color: #00437f;
   background-image: none;
 }
 .btn-success {
-  background-image: -webkit-linear-gradient(top, #638aff 0%, #265cff 100%);
-  background-image: -o-linear-gradient(top, #638aff 0%, #265cff 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#638aff), to(#265cff));
-  background-image: linear-gradient(to bottom, #638aff 0%, #265cff 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff638aff', endColorstr='#ff265cff', GradientType=0);
+  background-image: -webkit-linear-gradient(top, #0064bc 0%, #00437f 100%);
+  background-image: -o-linear-gradient(top, #0064bc 0%, #00437f 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#0064bc), to(#00437f));
+  background-image: linear-gradient(to bottom, #0064bc 0%, #00437f 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0064bc', endColorstr='#ff00437f', GradientType=0);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
   background-repeat: repeat-x;
-  border-color: #1c54ff;
+  border-color: #003e75;
 }
 .btn-success:hover,
 .btn-success:focus {
-  background-color: #265cff;
+  background-color: #00437f;
   background-position: 0 -15px;
 }
 .btn-success:active,
 .btn-success.active {
-  background-color: #265cff;
-  border-color: #1c54ff;
+  background-color: #00437f;
+  border-color: #003e75;
 }
 .btn-success.disabled,
 .btn-success[disabled],
@@ -193,7 +193,7 @@ fieldset[disabled] .btn-success:active,
 .btn-success.disabled.active,
 .btn-success[disabled].active,
 fieldset[disabled] .btn-success.active {
-  background-color: #265cff;
+  background-color: #00437f;
   background-image: none;
 }
 .btn-info {
@@ -238,24 +238,24 @@ fieldset[disabled] .btn-info.active {
   background-image: none;
 }
 .btn-warning {
-  background-image: -webkit-linear-gradient(top, #638aff 0%, #265cff 100%);
-  background-image: -o-linear-gradient(top, #638aff 0%, #265cff 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#638aff), to(#265cff));
-  background-image: linear-gradient(to bottom, #638aff 0%, #265cff 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff638aff', endColorstr='#ff265cff', GradientType=0);
+  background-image: -webkit-linear-gradient(top, #0064bc 0%, #00437f 100%);
+  background-image: -o-linear-gradient(top, #0064bc 0%, #00437f 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#0064bc), to(#00437f));
+  background-image: linear-gradient(to bottom, #0064bc 0%, #00437f 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0064bc', endColorstr='#ff00437f', GradientType=0);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
   background-repeat: repeat-x;
-  border-color: #1c54ff;
+  border-color: #003e75;
 }
 .btn-warning:hover,
 .btn-warning:focus {
-  background-color: #265cff;
+  background-color: #00437f;
   background-position: 0 -15px;
 }
 .btn-warning:active,
 .btn-warning.active {
-  background-color: #265cff;
-  border-color: #1c54ff;
+  background-color: #00437f;
+  border-color: #003e75;
 }
 .btn-warning.disabled,
 .btn-warning[disabled],
@@ -275,28 +275,28 @@ fieldset[disabled] .btn-warning:active,
 .btn-warning.disabled.active,
 .btn-warning[disabled].active,
 fieldset[disabled] .btn-warning.active {
-  background-color: #265cff;
+  background-color: #00437f;
   background-image: none;
 }
 .btn-danger {
-  background-image: -webkit-linear-gradient(top, #638aff 0%, #265cff 100%);
-  background-image: -o-linear-gradient(top, #638aff 0%, #265cff 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#638aff), to(#265cff));
-  background-image: linear-gradient(to bottom, #638aff 0%, #265cff 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff638aff', endColorstr='#ff265cff', GradientType=0);
+  background-image: -webkit-linear-gradient(top, #0064bc 0%, #00437f 100%);
+  background-image: -o-linear-gradient(top, #0064bc 0%, #00437f 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#0064bc), to(#00437f));
+  background-image: linear-gradient(to bottom, #0064bc 0%, #00437f 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0064bc', endColorstr='#ff00437f', GradientType=0);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
   background-repeat: repeat-x;
-  border-color: #1c54ff;
+  border-color: #003e75;
 }
 .btn-danger:hover,
 .btn-danger:focus {
-  background-color: #265cff;
+  background-color: #00437f;
   background-position: 0 -15px;
 }
 .btn-danger:active,
 .btn-danger.active {
-  background-color: #265cff;
-  border-color: #1c54ff;
+  background-color: #00437f;
+  border-color: #003e75;
 }
 .btn-danger.disabled,
 .btn-danger[disabled],
@@ -316,7 +316,7 @@ fieldset[disabled] .btn-danger:active,
 .btn-danger.disabled.active,
 .btn-danger[disabled].active,
 fieldset[disabled] .btn-danger.active {
-  background-color: #265cff;
+  background-color: #00437f;
   background-image: none;
 }
 .thumbnail,
@@ -337,13 +337,13 @@ fieldset[disabled] .btn-danger.active {
 .dropdown-menu > .active > a,
 .dropdown-menu > .active > a:hover,
 .dropdown-menu > .active > a:focus {
-  background-image: -webkit-linear-gradient(top, #638aff 0%, #4977ff 100%);
-  background-image: -o-linear-gradient(top, #638aff 0%, #4977ff 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#638aff), to(#4977ff));
-  background-image: linear-gradient(to bottom, #638aff 0%, #4977ff 100%);
+  background-image: -webkit-linear-gradient(top, #0064bc 0%, #0056a3 100%);
+  background-image: -o-linear-gradient(top, #0064bc 0%, #0056a3 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#0064bc), to(#0056a3));
+  background-image: linear-gradient(to bottom, #0064bc 0%, #0056a3 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff638aff', endColorstr='#ff4977ff', GradientType=0);
-  background-color: #4977ff;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0064bc', endColorstr='#ff0056a3', GradientType=0);
+  background-color: #0056a3;
 }
 .navbar-default {
   background-image: -webkit-linear-gradient(top, #ffffff 0%, #f8f8f8 100%);
@@ -407,12 +407,12 @@ fieldset[disabled] .btn-danger.active {
   .navbar .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar .navbar-nav .open .dropdown-menu > .active > a:focus {
     color: #fff;
-    background-image: -webkit-linear-gradient(top, #638aff 0%, #4977ff 100%);
-    background-image: -o-linear-gradient(top, #638aff 0%, #4977ff 100%);
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#638aff), to(#4977ff));
-    background-image: linear-gradient(to bottom, #638aff 0%, #4977ff 100%);
+    background-image: -webkit-linear-gradient(top, #0064bc 0%, #0056a3 100%);
+    background-image: -o-linear-gradient(top, #0064bc 0%, #0056a3 100%);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#0064bc), to(#0056a3));
+    background-image: linear-gradient(to bottom, #0064bc 0%, #0056a3 100%);
     background-repeat: repeat-x;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff638aff', endColorstr='#ff4977ff', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0064bc', endColorstr='#ff0056a3', GradientType=0);
   }
 }
 .alert {
@@ -465,20 +465,20 @@ fieldset[disabled] .btn-danger.active {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffebebeb', endColorstr='#fff5f5f5', GradientType=0);
 }
 .progress-bar {
-  background-image: -webkit-linear-gradient(top, #638aff 0%, #3064ff 100%);
-  background-image: -o-linear-gradient(top, #638aff 0%, #3064ff 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#638aff), to(#3064ff));
-  background-image: linear-gradient(to bottom, #638aff 0%, #3064ff 100%);
+  background-image: -webkit-linear-gradient(top, #0064bc 0%, #004989 100%);
+  background-image: -o-linear-gradient(top, #0064bc 0%, #004989 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#0064bc), to(#004989));
+  background-image: linear-gradient(to bottom, #0064bc 0%, #004989 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff638aff', endColorstr='#ff3064ff', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0064bc', endColorstr='#ff004989', GradientType=0);
 }
 .progress-bar-success {
-  background-image: -webkit-linear-gradient(top, #638aff 0%, #3064ff 100%);
-  background-image: -o-linear-gradient(top, #638aff 0%, #3064ff 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#638aff), to(#3064ff));
-  background-image: linear-gradient(to bottom, #638aff 0%, #3064ff 100%);
+  background-image: -webkit-linear-gradient(top, #0064bc 0%, #004989 100%);
+  background-image: -o-linear-gradient(top, #0064bc 0%, #004989 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#0064bc), to(#004989));
+  background-image: linear-gradient(to bottom, #0064bc 0%, #004989 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff638aff', endColorstr='#ff3064ff', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0064bc', endColorstr='#ff004989', GradientType=0);
 }
 .progress-bar-info {
   background-image: -webkit-linear-gradient(top, #d9e2ff 0%, #a6bbff 100%);
@@ -489,20 +489,20 @@ fieldset[disabled] .btn-danger.active {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffd9e2ff', endColorstr='#ffa6bbff', GradientType=0);
 }
 .progress-bar-warning {
-  background-image: -webkit-linear-gradient(top, #638aff 0%, #3064ff 100%);
-  background-image: -o-linear-gradient(top, #638aff 0%, #3064ff 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#638aff), to(#3064ff));
-  background-image: linear-gradient(to bottom, #638aff 0%, #3064ff 100%);
+  background-image: -webkit-linear-gradient(top, #0064bc 0%, #004989 100%);
+  background-image: -o-linear-gradient(top, #0064bc 0%, #004989 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#0064bc), to(#004989));
+  background-image: linear-gradient(to bottom, #0064bc 0%, #004989 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff638aff', endColorstr='#ff3064ff', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0064bc', endColorstr='#ff004989', GradientType=0);
 }
 .progress-bar-danger {
-  background-image: -webkit-linear-gradient(top, #638aff 0%, #3064ff 100%);
-  background-image: -o-linear-gradient(top, #638aff 0%, #3064ff 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#638aff), to(#3064ff));
-  background-image: linear-gradient(to bottom, #638aff 0%, #3064ff 100%);
+  background-image: -webkit-linear-gradient(top, #0064bc 0%, #004989 100%);
+  background-image: -o-linear-gradient(top, #0064bc 0%, #004989 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#0064bc), to(#004989));
+  background-image: linear-gradient(to bottom, #0064bc 0%, #004989 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff638aff', endColorstr='#ff3064ff', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0064bc', endColorstr='#ff004989', GradientType=0);
 }
 .progress-bar-striped {
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
@@ -517,14 +517,14 @@ fieldset[disabled] .btn-danger.active {
 .list-group-item.active,
 .list-group-item.active:hover,
 .list-group-item.active:focus {
-  text-shadow: 0 -1px 0 #3064ff;
-  background-image: -webkit-linear-gradient(top, #638aff 0%, #3d6dff 100%);
-  background-image: -o-linear-gradient(top, #638aff 0%, #3d6dff 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#638aff), to(#3d6dff));
-  background-image: linear-gradient(to bottom, #638aff 0%, #3d6dff 100%);
+  text-shadow: 0 -1px 0 #004989;
+  background-image: -webkit-linear-gradient(top, #0064bc 0%, #005096 100%);
+  background-image: -o-linear-gradient(top, #0064bc 0%, #005096 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#0064bc), to(#005096));
+  background-image: linear-gradient(to bottom, #0064bc 0%, #005096 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff638aff', endColorstr='#ff3d6dff', GradientType=0);
-  border-color: #3d6dff;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0064bc', endColorstr='#ff005096', GradientType=0);
+  border-color: #005096;
 }
 .list-group-item.active .badge,
 .list-group-item.active:hover .badge,
@@ -544,12 +544,12 @@ fieldset[disabled] .btn-danger.active {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#ffe8e8e8', GradientType=0);
 }
 .panel-primary > .panel-heading {
-  background-image: -webkit-linear-gradient(top, #638aff 0%, #4977ff 100%);
-  background-image: -o-linear-gradient(top, #638aff 0%, #4977ff 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#638aff), to(#4977ff));
-  background-image: linear-gradient(to bottom, #638aff 0%, #4977ff 100%);
+  background-image: -webkit-linear-gradient(top, #0064bc 0%, #0056a3 100%);
+  background-image: -o-linear-gradient(top, #0064bc 0%, #0056a3 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#0064bc), to(#0056a3));
+  background-image: linear-gradient(to bottom, #0064bc 0%, #0056a3 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff638aff', endColorstr='#ff4977ff', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0064bc', endColorstr='#ff0056a3', GradientType=0);
 }
 .panel-success > .panel-heading {
   background-image: -webkit-linear-gradient(top, #dff0d8 0%, #d0e9c6 100%);
